# wingpanel-indicator-namarupa

./: .gitignore  CODE_OF_CONDUCT.md  README.md  com.github.lenemter.wingpanel-indicator-namarupa.deb  meson.build
debian/: changelog  control  copyright  files
po/: POTFILES  meson.build  namarupa-indicator.pot  namarupa.pot  ru.po
src/: AyatanaIndicator.vala  Config.vala.in  Indicator.vala  IndicatorButton.vala  IndicatorFactory.vala  Separator.vala  TrayIcon.vala
vapi/: config.vapi
